<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".ui.filter.FilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/type_contraint_layour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/book_background"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/type_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/type"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/type_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/type_text_view"
            app:layout_constraintTop_toBottomOf="@+id/type_text_view">

            <RadioButton
                android:id="@+id/book_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/book"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/ebook_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/ebook"
                android:textColor="@color/white" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/status_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/book_background"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/type_contraint_layour"
        app:layout_constraintTop_toBottomOf="@id/type_contraint_layour">

        <TextView
            android:id="@+id/status_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/status_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/status_text_view"
            app:layout_constraintTop_toBottomOf="@+id/status_text_view">

            <RadioButton
                android:id="@+id/available_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/available"
                android:textSize="14sp"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/unavailable_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/unavailable"
                android:textSize="14sp"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/pre_release_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/pre_release"
                android:textSize="14sp"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/out_of_catalog_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/out_of_catalog"
                android:textSize="14sp"
                android:textColor="@color/white" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/status_constraint_layout"
        app:layout_constraintTop_toBottomOf="@id/status_constraint_layout">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_bt_white"
            android:text="@string/clear"
            android:textAllCaps="false"
            android:textColor="@color/grey_me"
            android:layout_marginStart="10dp"
            app:backgroundTint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/apply_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_bt_grey"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/grey_me"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>